# holly

./: .gitignore  CustomPrelude.hs  LICENSE  TODO  holly-xhb.cabal  holly.cabal  holly.hs  holly.prof
Holly/: Drawable.hs  Events.hs  Missing.hs  Paint.hs  Types.hs  Window.hs  X11.hs  X11.hsc  XHB.hs
Holly/Plugin/: Stacking.hs
