name:           holly
version:        0.1.0.0
synopsis:       Compositor for X11
-- description:         
license:        BSD3
license-file:   LICENSE
author:         Thomas Tuegel <ttuegel@gmail.com>
maintainer:     ttuegel@gmail.com
copyright:      (c) 2012 Thomas Tuegel
category:       Graphics
build-type:     Simple
cabal-version:  >=1.8

executable holly
    main-is:        holly.hs
    other-modules:  Holly.Paint,
                    Holly.Types,
                    Holly.XHB
    ghc-options:    -Wall
    build-depends:  base,
                    containers >= 0.4 && < 0.6,
                    errors == 1.4.*,
                    transformers >= 0.2 && < 0.4,
                    xhb == 0.5.*
