name:                holly
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel <ttuegel@gmail.com>
maintainer:          ttuegel@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable holly
  main-is:             holly.hs
  other-modules:       Holly.Paint,
                       Holly.Types,
                       Holly.X11
  ghc-options:         -Wall
  build-depends:       base,
                       containers >= 0.4 && < 0.6,
                       data-default == 0.5.*,
                       transformers >= 0.2 && < 0.4,
                       X11 == 1.6.*,
                       X11-xft == 0.3.*
  pkgconfig-depends:          xrender
